# loom-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
evals/: tasks.yaml
evals/fixtures/add_function/: test_text_tools.py  text_tools.py
evals/fixtures/off_by_one/: test_utils.py  utils.py
evals/fixtures/write_tests/: versions.py
loom/: __init__.py
loom/cli/: main.py
loom/config/: default_config.yaml  default_settings.json
loom/core/: __init__.py  advisor.py  artifact_store.py  config.py  graphify.py  hooks.py  mcp.py  model_catalog.py  model_router.py  ollama.py  orchestrator.py  permissions.py  providers.py  recommendations.py  repomap.py  sessions.py  settings.py  skills.py  slot.py  undo.py  update.py  usage.py  worktree.py
loom/middleware/: __init__.py  policy.py  prompt_size_guard.py  tool_exclusion.py
loom/skills/graphify-graph-rag/: SKILL.md
loom/subagents/: __init__.py  base.py  bash.py  editor.py  explorer.py  general.py  reviewer.py  searcher.py  tester.py
loom/tools/: __init__.py  filesystem.py  sandbox.py  search.py  shell.py
loom/ui/: __init__.py  onboarding.py  repl.py  slash.py  theme.py
packaging/: entry_point.py  loom.spec
scripts/: eval.py  install.ps1  install.sh  smoke.py
tests/: conftest.py  test_advisor.py  test_advisory_integration.py  test_cli.py  test_cloud_fallback.py  test_config.py  test_graphify.py  test_hooks.py  test_loop_mode.py  test_mcp.py  test_model_catalog.py  test_model_router.py  test_ollama.py  test_onboarding.py  test_onboarding_interactive.py  test_orchestrator_security.py  test_permissions.py  test_plan_mode.py  test_providers.py  test_recommendations.py  test_repl_onboarding.py  test_repl_stream.py  test_sessions.py  test_settings.py  test_skills.py  test_slash.py  test_subagents.py  test_tools.py  test_undo_repomap.py  test_update.py  test_usage.py  test_worktree.py
