[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom-cli"
version = "0.2.0"
description = "Loom — a hybrid local/cloud multi-agent CLI coding assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Loom" }]
keywords = ["agents", "cli", "coding-assistant", "deepagents", "ollama", "langchain"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
]

dependencies = [
    # Agent harness + orchestration. Loom relies on 0.6-era APIs
    # (deepagents.backends, per-subagent middleware, the general-purpose
    # override); <0.7 guards against breaking changes in the beta surfaces.
    "deepagents>=0.6,<0.7",
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    # Model providers
    "langchain-ollama>=0.3.0",      # local models (Metal on macOS, CUDA on Linux/Windows)
    "langchain-anthropic>=0.3.0",   # cloud orchestrator / advisor / reviewer
    "langchain-openai>=0.3.0",      # optional cloud orchestrator
    "langchain-google-genai>=2.0.0",# optional cloud orchestrator
    "langchain-mcp-adapters>=0.1.9",# MCP servers (Playwright browser testing)
    "langgraph-checkpoint-sqlite>=2.0.0",  # durable session state for /resume
    # CLI + UX
    "typer>=0.12.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
mlx = [
    # Optional native Apple-Silicon path. Ollama already uses Metal, so this is
    # only needed if you want to run models directly through MLX instead.
    "mlx-lm>=0.18.0; platform_system == 'Darwin'",
]
bedrock = [
    # Routes claude-* models through AWS Bedrock (or a Bedrock-compatible
    # corporate proxy) instead of the direct Anthropic API — only needed when
    # CLAUDE_CODE_USE_BEDROCK / ANTHROPIC_BEDROCK_BASE_URL is set.
    "langchain-aws>=1.4.0",
]
vertexai = [
    # Google Vertex AI (separate from the Gemini Developer API / Google AI
    # Studio, which uses langchain-google-genai and is a base dependency).
    "langchain-google-vertexai>=2.0.0",
]
[dependency-groups]
# Installed by default with `uv sync`; excluded from the published wheel.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
# Only needed to freeze standalone binaries (`uv sync --group build`); see
# packaging/. Not installed by a plain `uv sync`.
build = [
    "pyinstaller>=6.11",
]

[project.scripts]
loom = "loom.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["loom"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
# Lint against the oldest supported version; the code also runs on 3.12–3.14.
target-version = "py311"
